--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,12 +46,14 @@
             android:textSize="24dp"
             />
         <Button
+            android:id="@+id/CheckTicket"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Check your Ticket"
             android:textSize="24dp"
             />
         <Button
+            android:id="@+id/AvailTicket"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Available Ticket"
